--- a/data-science.html
+++ b/data-science.html
@@ -99,13 +99,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://pacmed.recruitee.com/o/data-science-internship-msc-or-phd-health-care'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pacmed.recruitee.com/o/data-science-internship-msc-or-phd-health-care'>
       Data Science Internship (MSc or PhD) Health care - Pacmed
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -139,7 +139,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/criteo/37aade70-1f4f-494a-89bb-0ae1775109e2/apply'>Criteo - Product Data Scientist - Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/37aade70-1f4f-494a-89bb-0ae1775109e2/apply'>Criteo - Product Data Scientist - Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 13, 2019 ... Product Data Scientist - Analytics. Paris, France. Product. Permanent. Submit 
 your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -176,11 +176,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -238,7 +238,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -414,7 +414,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gds/job/o46BafwF'>GDS Careers - Associate Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gds/job/o46BafwF'>GDS Careers - Associate Data Scientist</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -456,7 +456,7 @@ Marketing?...</p>
 revolutionise the insurance industry. You will be joining an established team, 
 working?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/109275D51F?viewed=true'>Tide Business Banking - Jobs: Senior Data Scientist (Marketing ...</a></h5> 
+<h5><a href='https://tide.workable.com/j/109275D51F?viewed=true'>Tide Business Banking - Jobs: Senior Data Scientist (Marketing ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 11, 2019 ... ... Iterate Tides Marketing attribution system; working with business teams in 
 order to run and evaluate experiments and using machine learning techniques in
@@ -478,7 +478,7 @@ order to run and evaluate experiments and using machine learning techniques in
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999691792367-data-scientist'>Numberly Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999691792367-data-scientist'>Numberly Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
