--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -104,7 +104,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -137,7 +137,7 @@ Technologies Inc.</p>
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence &amp; Reporting</a></h5> 
+<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence &amp; Reporting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -152,7 +152,7 @@ scalable data pipelines to support various data integrations; Propose, build, an
 <p>4 napja ... Apply online for the job of Business Intelligence Analyst at Adevinta Classified 
 Media Hungary Kft.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sivantos.recruitee.com/o/analyst-business-intelligence'>
+<h5><a href='https://sivantos.recruitee.com/o/analyst-business-intelligence'>
       Analyst, Business Intelligence - Sivantos
     </a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
@@ -178,7 +178,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -194,7 +194,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -215,11 +215,11 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86'>iland Internet Solutions Corporation - Jobs: Enterprise Business Intelligence Manager - Apply online</a></h5> 
+<h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86'>iland Internet Solutions Corporation - Jobs: Enterprise Business Intelligence Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -417,7 +417,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4355910002'>Job Application for Graduate Business Intelligence Analyst at Ocado</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4355910002'>Job Application for Graduate Business Intelligence Analyst at Ocado</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -437,7 +437,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">United States, Oregon, Portland</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trustedshops.recruitee.com/l/fr/o/business-intelligence-analyst-wmdiv'>
+<h5><a href='https://trustedshops.recruitee.com/l/fr/o/business-intelligence-analyst-wmdiv'>
       Business Intelligence Analyst (w/m/div.) - Trusted Shops GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
